--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -16,6 +16,7 @@
             class="form-control text-center"
             name="secretPost"
             placeholder="What's your secret?"
+            autocomplete="off"
           />
         </div>
         <div class="submit-button">
